Installed react-helmet for title and positioned clock

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -37,6 +37,12 @@ body {
     gap: 5rem;
 }
 
+.nav--clock {
+    position: absolute;
+    top: 3%;
+    right: 5%;
+}
+
 /* == FOOTER == */
 
 footer {
