--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,6 +3,8 @@
 body {
     margin: 0 20rem;
     color: black;
+
+    transition: background-color 0.5s ease;
 }
 
 .main {
@@ -14,6 +16,8 @@ body {
 }
 
 .dark {
+    transition: background-color 0.5s ease;
+
     background-color: black;
     color: white;
     & h2,
@@ -21,6 +25,10 @@ body {
     p, 
     .nav__links--link {
         color: white;
+    }
+    & .darkModeBtn {
+        background-color: black;
+        border: 2px solid white;
     }
 }
 
@@ -46,6 +54,23 @@ body {
 .nav__links {
     display: flex;
     gap: 5rem;
+}
+
+/* dark mode */
+.darkModeBtn {
+    transition: background-color 0.5s ease;
+
+    border-radius: 1rem;
+    background-color: white;
+
+    position: absolute;
+    top: 3%;
+    left: 5%;
+
+    & img {
+        width: 2.5rem;
+        padding: .3rem;
+    }
 }
 
 /* clock */
