--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,27 +2,27 @@
 
 
 /* fonts */
-.poppins-regular {
-    font-family: "Poppins", sans-serif;
+.ubuntu-regular {
+    font-family: "Ubuntu", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
   
-.poppins-semibold {
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
+.ubuntu-medium {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 500;
     font-style: normal;
 }
   
-.poppins-bold {
-    font-family: "Poppins", sans-serif;
+.ubuntu-bold {
+    font-family: "Ubuntu", sans-serif;
     font-weight: 700;
     font-style: normal;
 }
   
 /* == GLOBAL == */
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: "Ubuntu", sans-serif;
     margin: 0 20rem;
     background-color: hsl(220, 16%, 36%);
     color: hsl(0, 0%, 100%);
@@ -41,6 +41,10 @@ body {
         color: black;
         text-decoration: none;
     }
+}
+
+.blueText {
+    color: hsl(183, 47%, 53%);
 }
 
 .light {
@@ -95,6 +99,7 @@ body {
 .lightModeBtn {
     transition: background-color 0.5s ease;
 
+    border: none;
     border-radius: 1rem;
     background-color: hsl(183, 47%, 53%);
 
@@ -136,11 +141,17 @@ footer {
 .homePage {
     display: flex;
     align-items: center;
-    gap: 15rem;
+    gap: 8rem;
 
     position: absolute;
     top: 30%;
     left: 25%;
+
+    font-size: 1.3rem;
+
+    & .homePage-pfp {
+        transform: translateY(-5rem);
+    }
 }
 
 .homePage--content {
@@ -148,7 +159,8 @@ footer {
     flex-direction: column;
 
     & .homePage--content-text {
-        width: 25rem;
+        width: 30rem;
+        line-height: 1.8rem;
     }
     & .homePage--content-links {
         display: flex;
@@ -190,6 +202,8 @@ footer {
     flex-direction: column;
     align-items: center;
 
+    font-size: 1.1rem;
+
     & .aboutPage--skills-skillbox {
         display: flex;
         justify-content: center;
@@ -210,6 +224,8 @@ footer {
             padding: .5rem;
             margin: .5rem;
 
+            font-weight: 500;
+
             & img {
                 width: 2.5rem;
             }
@@ -218,5 +234,6 @@ footer {
     
     & h2 {
         padding: 2rem 0;
+        font-size: 2rem;
     }
 }
