--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -254,7 +254,6 @@ footer {
         background-color: hsl(219, 16%, 41%);
         width: 100%;
         max-width: 30rem;
-        justify-content: center;
 
         padding: 2rem;
 
@@ -356,6 +355,60 @@ footer {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
+    & h2 {
+        font-size: 2rem;
+        padding: 2rem 0;
+    }
+
+    & p {
+        width: 50%;
+        text-align: center;
+    }
+
+    & .contactPage--form {
+        background-color: hsl(219, 16%, 41%);
+        width: 100%;
+        max-width: 30rem;
+
+        padding: 2rem;
+        margin: 5rem;
+
+        border-radius: 2rem;
+        box-shadow: 1rem 1rem 2rem hsl(183, 47%, 53%);
+
+        & form {
+            display: flex;
+            flex-direction: column;
+            & .inputBox {
+                color: black;
+                padding: .5rem;
+
+                & .field {
+                    width: 100%;
+                    padding: .5rem;
+                    border-radius: .8rem;
+                    border: none;
+
+                    &.field_message {
+                        resize: none;
+                    }
+                }
+            }
+        }
+
+        & button {
+            margin-top: 2rem;
+            padding: .6rem 0;
+
+            background-color: hsl(183, 47%, 53%);
+            color: white;
+            font-weight: 600;
+            border: none;
+            border-radius: .8rem;
+            cursor: pointer;
+        }
+    }
 }
 
 /* == LIGHT MODE == */
