--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -50,15 +50,11 @@ body {
     color: hsl(183, 47%, 53%);
 }
 
-/* width */
+/* scrollbar */
 ::-webkit-scrollbar {
     width: 10px;
 }
-  
-  /* Track */
 
- 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: hsl(183, 47%, 53%);
   border-radius: .5rem;
@@ -99,13 +95,15 @@ body {
     z-index: 5;
 }
 
-/* dark mode */
+/* light mode */
 .lightModeBtn {
     transition: background-color 0.5s ease;
 
     border: none;
     border-radius: 1rem;
     background-color: hsl(183, 47%, 53%);
+
+    cursor: pointer;
 
     & img {
         width: 2.5rem;
@@ -184,6 +182,9 @@ footer {
                 align-items: center;
                 gap: 2rem;
                 color: hsl(0, 0%, 100%);
+            }
+            &:hover {
+                opacity: .9;
             }
         }
     }
